--- a/Express.Tests/Express.Tests.csproj
+++ b/Express.Tests/Express.Tests.csproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Compile Include="GeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WithItConfig.cs" />
+    <Compile Include="Config.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
