--- a/Express/Express.csproj
+++ b/Express/Express.csproj
@@ -33,14 +33,17 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EnumerableExtensions.cs" />
-    <Compile Include="IWithItConfig.cs" />
-    <Compile Include="PropertyText.cs" />
-    <Compile Include="ReflectionExtensions.cs" />
-    <Compile Include="TextExtensions.cs" />
-    <Compile Include="Generator.cs" />
+    <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="IExpressConfig.cs" />
+    <Compile Include="Text\IndexerText.cs" />
+    <Compile Include="Text\MethodText.cs" />
+    <Compile Include="Text\PropertyText.cs" />
+    <Compile Include="Extensions\ReflectionExtensions.cs" />
+    <Compile Include="Service.cs" />
+    <Compile Include="Extensions\TextExtensions.cs" />
+    <Compile Include="Text\Generator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeProperties.cs" />
+    <Compile Include="Text\TypeText.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
