Added more generic test and demo cases

--- a/Express.Demo/Express.Demo.csproj
+++ b/Express.Demo/Express.Demo.csproj
@@ -42,6 +42,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Config.cs" />
+    <Compile Include="Widget.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Express\Express.csproj">
