--- a/Express.Tests/Express.Tests.csproj
+++ b/Express.Tests/Express.Tests.csproj
@@ -45,6 +45,7 @@
     <Compile Include="GeneratorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="ReflectionExtensionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
